# Ag-grow_senior_design

./: README.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: ble_ex_gatt_server.1614275331758.pdom  i2c_ex.1614277614578.pdom  pvs_nv_ex.1614296967303.pdom  spi_ex.1614277892063.pdom
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 6.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.oomph.setup.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
AgGrowSensorsCode/i2c_Example/: .cproject  .project  sdkconfig
AgGrowSensorsCode/i2c_Example/main/: CMakeLists.txt  i2c_example_main.c  minmea.c  vl53l0x.c
BLE_ex_server/: .cproject  .project  sdkconfig
adc/: .project
agGrow_reporting/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
agGrow_reporting/main/: CMakeLists.txt  Kconfig.projbuild  gatts_server.c  gatts_server.h  i2c_main.c  i2c_main.h  lcd_driver.c  lcd_driver.h  lcd_ssd_driver.c  lcd_ssd_driver.h  main.c  pretty_effect.c  spi_disp_lib.c  spi_master_example_main.c  spi_master_main.c  spi_master_main.h  touch_pad.c  touch_pad.h
agGrow_reporting/main/includes/: DS2438.c  DS2438.h  batteryMonitor.c  batteryMonitor.h  cornCount.c  cornCount.h  decode_image.c  grlib.h  main_page.c  minmea.c  mjd.c  mjd_neom8n.c  owb.c  owb.h  owb_rmt.c  pretty_effect.c  spi_master_main.c  spi_master_main.h
ag_grow_reporting/: .cproject  .project
ble_ex_gatt_server/: .cproject  .project  sdkconfig  sdkconfig.old
ble_ex_gatt_server/main/: gatts_demo.c
i2c_ex/: .cproject  .project  sdkconfig
images/: report_page.c
pvs_nv_ex/: .cproject  .project
spi_ex/: .cproject  .project  sdkconfig
spi_ex/main/test/: lcd_driver.h  spi_display.c  spi_display.h  spi_master_main.c  spi_master_main.h
(+20 files in other folders)
