idf_component_register(SRCS "includes/decode_image.c"
                            "gatts_server.c"
                            "main.c"
                            "i2c_main.c"
                            "includes/vl53l0x.c"
                            "includes/mjd_neom8n.h"
                            "includes/mjd.h"
                            "includes/mjd_neom8n.c"
                            "includes/mjd.c"
                            "includes/minmea.h"
                            "includes/minmea.c"
                    INCLUDE_DIRS "."
                    EMBED_FILES image.jpg)