idf_component_register(SRCS "gatts_server.c"
                            "lcd_ssd_driver.c"
                            "main.c"
                            "i2c_main.c"
                            "touch_pad.c"
                            "includes/vl53l0x.c"
                            "includes/mjd_neom8n.h"
                            "includes/mjd.h"
                            "includes/mjd_neom8n.c"
                            "includes/mjd.c"
                            "includes/minmea.h"
                            "includes/minmea.c"
                            "includes/main_page.c"
                            "includes/cornCount.c"
                    INCLUDE_DIRS ".")